--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1>Hellooooo</h1>
+<h1>Hellooooo coursera, it's a great course</h1>
 </body>
 </html>
